force-app/main/default/objects/Account_Bill__c/Account_Bill__c.object-meta.xml
<CustomObject>
    <label>Account Bill</label>
    <nameField>
        
        <label>Account Bill Name</label>
        
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Account Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>