force-app/main/default/objects/Account_Bill__c/fields/Account_Bill_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_ID__c</fullName>
    <formula>Id</formula>
    <label>Account Bill ID</label>
    <type>Text</type>
</CustomField>