force-app/main/default/objects/Account_Bill__c/fields/Account_Bill_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_Status__c</fullName>
    <formula>IF(Published__c = TRUE, &apos;Published&apos;, IF(Ready_for_Email_Send__c = TRUE, &apos;Ready for Email Send&apos;, &apos;Not Published&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Bill Status</label>
    <type>Text</type>
</CustomField>