force-app/main/default/objects/Account_Bill__c/fields/AcctNum__c.field-meta.xml
<CustomField>
    <fullName>AcctNum__c</fullName>
    <formula>UPPER(Parent_Account__r.Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctNum</label>
    <type>Text</type>
</CustomField>