force-app/main/default/objects/Account_Bill__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <defaultValue>&quot;Statement&quot;</defaultValue>
    <label>Activity Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>