force-app/main/default/objects/Account_Bill__c/fields/Added_To_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added To Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>