force-app/main/default/objects/Account_Bill__c/fields/Additional_Bill_Insert__c.field-meta.xml
<CustomField>
    <fullName>Additional_Bill_Insert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add a second conga template to the bill with this lookup</inlineHelpText>
    <label>Additional Bill Insert</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Account Bills (Additional Bill Insert)</relationshipLabel>
    <relationshipName>Account_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>