force-app/main/default/objects/Account_Bill__c/fields/Additional_Send_Bill_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Send_Bill_Email__c</fullName>
    <formula>Parent_Account__r.Additional_Email__c</formula>
    <label>Additional Send Bill Email</label>
    <type>Text</type>
</CustomField>