force-app/main/default/objects/Account_Bill__c/fields/Address_Attn__c.field-meta.xml
<CustomField>
    <fullName>Address_Attn__c</fullName>
    <formula>Parent_Account__r.Address_Attn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Attn</label>
    <type>Text</type>
</CustomField>