force-app/main/default/objects/Account_Bill__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <inlineHelpText>Shows the total adjustments the customer receives, even if only some of the adjustment is applied this bill (for instance, if they get a credit for more than their current bill)</inlineHelpText>
    <label>Adjustments</label>
    <summarizedField>System_Bill__c.Adjustments__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>