force-app/main/default/objects/Account_Bill__c/fields/Announcement_Header__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Header__c</fullName>
    <defaultValue>&quot;Announcement!&quot;</defaultValue>
    <label>Announcement Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>