force-app/main/default/objects/Account_Bill__c/fields/Autopay__c.field-meta.xml
<CustomField>
    <fullName>Autopay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autopay</label>
    <type>Checkbox</type>
</CustomField>