force-app/main/default/objects/Account_Bill__c/fields/Autopay_Message__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Message__c</fullName>
    <formula>IF( Parent_Account__r.Recurring_Billing__c, &quot;Since you’re already signed up for Autopay, your payments will automatically be collected on the first of each month – no action required!&quot;, &quot;Pay your bill online through your BlueWave portal: bluewavememberportal.force.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autopay Message</label>
    <type>Text</type>
</CustomField>