force-app/main/default/objects/Account_Bill__c/fields/Balance_Net_Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Balance_Net_Late_Payments__c</fullName>
    <label>Balance Net of Late Payments</label>
    <summarizedField>System_Bill__c.Balance_Net_Late_Payments__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>