force-app/main/default/objects/Account_Bill__c/fields/Bill_Attach_Document__c.field-meta.xml
<CustomField>
    <fullName>Bill_Attach_Document__c</fullName>
    <inlineHelpText>Used in CS customer portal for link to file</inlineHelpText>
    <label>Bill Attach Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>