force-app/main/default/objects/Account_Bill__c/fields/Bill_Attach_Version__c.field-meta.xml
<CustomField>
    <fullName>Bill_Attach_Version__c</fullName>
    <inlineHelpText>Used in CS Invoice Email - Attachment must be a content version ID</inlineHelpText>
    <label>Bill Attach Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>