force-app/main/default/objects/Account_Bill__c/fields/Bill_Message__c.field-meta.xml
<CustomField>
    <fullName>Bill_Message__c</fullName>
    <inlineHelpText>For use with PrintSF cover letter</inlineHelpText>
    <label>Bill Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>