force-app/main/default/objects/Account_Bill__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>