force-app/main/default/objects/Account_Bill__c/fields/Bill_Number_Guard__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number_Guard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Number Guard</label>
    <type>Checkbox</type>
</CustomField>