force-app/main/default/objects/Account_Bill__c/fields/Bill_PDF_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Bill_PDF_Page_Count__c</fullName>
    <description>This is the number of pages in the most recent bill pdf generated through Conga. The value is set through the Conga button or the Conga Composer used in bill generation.</description>
    <inlineHelpText>This is the number of pages in the most recent bill pdf generated through Conga. The value is set through the Conga button or the Conga Composer used in bill generation.</inlineHelpText>
    <label>Bill PDF Page Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>