force-app/main/default/objects/Account_Bill__c/fields/Bill_Template__c.field-meta.xml
<CustomField>
    <fullName>Bill_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Account Bills</relationshipLabel>
    <relationshipName>Account_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>