force-app/main/default/objects/Account_Bill__c/fields/Bill_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_Template_Name__c</fullName>
    <formula>Bill_Template__r.APXTConga4__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Template Name</label>
    <type>Text</type>
</CustomField>