force-app/main/default/objects/Account_Bill__c/fields/Carry_Over_Balance__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Balance__c</fullName>
    <label>Carry Over Balance</label>
    <summarizedField>System_Bill__c.Carry_Over_Balance__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>