force-app/main/default/objects/Account_Bill__c/fields/Conga_Letter_Stream_Merge__c.field-meta.xml
<CustomField>
    <fullName>Conga_Letter_Stream_Merge__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[Sbs]a27j0000000bSg9&quot; + 
&quot;&amp;templateid=&quot; + Bill_Template__r.Id + 
&quot;&amp;UF0=1&quot; + 
&quot;&amp;MFTS0=Ready_for_Paper_Bill_Queue__c&quot; + 
&quot;&amp;MFTSValue0=false&quot; + 
&quot;&amp;MFTS1=Added_To_Paper_Bill_Queue__c&quot; + 
&quot;&amp;MFTSValue1=true&quot; + 
&quot;&amp;APDF=1&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Letter Stream Merge</label>
    <type>Text</type>
</CustomField>