force-app/main/default/objects/Account_Bill__c/fields/Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template__c</fullName>
    <label>Conga Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Bill Short Message</fullName>
            </value>
            <value>
                <fullName>CS Bill Long Message</fullName>
            </value>
            <value>
                <fullName>CS Bill Long Message with NGrid Insert</fullName>
            </value>
            <value>
                <fullName>CS Bill Payment Plan</fullName>
            </value>
            <value>
                <fullName>CS Bill Short Message with NGrid Insert</fullName>
            </value>
            <value>
                <fullName>Anchor Long Table</fullName>
            </value>
            <value>
                <fullName>Anchor Short Table</fullName>
            </value>
            <value>
                <fullName>DoverOneOffTemplate</fullName>
            </value>
            <value>
                <fullName>AMP CS Bill Short Message with Insert</fullName>
            </value>
            <value>
                <fullName>AMP CS Bill Short Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>