force-app/main/default/objects/Account_Bill__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Bill Statment Date</label>
    <type>Date</type>
</CustomField>