force-app/main/default/objects/Account_Bill__c/fields/Due_Date_SB__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_SB__c</fullName>
    <label>Due Date</label>
    <summarizedField>System_Bill__c.Bill_Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>System_Bill__c.Bill_Due_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>