force-app/main/default/objects/Account_Bill__c/fields/Engagement_Message__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Message__c</fullName>
    <label>Engagement Message</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>