force-app/main/default/objects/Account_Bill__c/fields/Fifth_Additional_Bill_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Additional_Bill_Line_Value__c</fullName>
    <inlineHelpText>Delete this field after 3/1/2018</inlineHelpText>
    <label>Fifth Additional Bill Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>