force-app/main/default/objects/Account_Bill__c/fields/First_Additional_Bill_Line_Title__c.field-meta.xml
<CustomField>
    <fullName>First_Additional_Bill_Line_Title__c</fullName>
    <label>First Additional Bill Line Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>