force-app/main/default/objects/Account_Bill__c/fields/First_Additional_Bill_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Additional_Bill_Line_Value__c</fullName>
    <label>First Additional Bill Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>