force-app/main/default/objects/Account_Bill__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <displayFormat>AB-{000000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>