force-app/main/default/objects/Account_Bill__c/fields/Is_First_Bill__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_First_Bill</label>
    <type>Checkbox</type>
</CustomField>