force-app/main/default/objects/Account_Bill__c/fields/Is_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Is_Most_Recent__c</fullName>
    <formula>Bill_Number__c =  Parent_Account__r.Count_of_ABs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Most_Recent</label>
    <type>Checkbox</type>
</CustomField>