force-app/main/default/objects/Account_Bill__c/fields/Last_Shared_Solar_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Shared_Solar_System_ID__c</fullName>
    <label>Last Shared Solar System ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>