force-app/main/default/objects/Account_Bill__c/fields/Late_Fee_Payments__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Payments__c</fullName>
    <label>Late Fee Payments</label>
    <summarizedField>System_Bill__c.Late_Fee_Payments__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>