force-app/main/default/objects/Account_Bill__c/fields/LetterStreamJob__c.field-meta.xml
<CustomField>
    <fullName>LetterStreamJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LetterStreamJob</label>
    <referenceTo>LetterStreamJob__c</referenceTo>
    <relationshipLabel>Account Bills</relationshipLabel>
    <relationshipName>Account_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>