force-app/main/default/objects/Account_Bill__c/fields/Link_to_Client_Logo__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Client_Logo__c</fullName>
    <formula>&quot;https://na54.salesforce.com&quot; + IF( ISPICKVAL(Parent_Account__r.Client_Brand_Key__c, &quot;BluewaveLogo&quot;), &quot;/resource/1470818337000/BlueWaveLogo&quot;, &quot;/resource/clientLogos/&quot; +  TEXT(Parent_Account__r.Client_Brand_Key__c) + &quot;.png&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Client Logo</label>
    <type>Text</type>
</CustomField>