force-app/main/default/objects/Account_Bill__c/fields/Message_to_put_on_Bill__c.field-meta.xml
<CustomField>
    <fullName>Message_to_put_on_Bill__c</fullName>
    <formula>IF( Payment_Plan_Balance__c &gt; 0 , &quot;You are currently on a payment plan and your payment will be made via autopay.&quot;,
IF(Parent_Account__r.Recurring_Billing__c = TRUE, &quot;You are currently on autopay, you do not need to submit a payment online. If you would like to be removed from autopay please give us a call at 844.SUN.4100.&quot;,&quot; &quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message to put on Bill</label>
    <type>Text</type>
</CustomField>