force-app/main/default/objects/Account_Bill__c/fields/New_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Balance__c</fullName>
    <formula>Parent_Account__r.Account_Balance__c + Due_This_Month__c + Late_Fees__c + Adjustments__c + Previous_Overpayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>