force-app/main/default/objects/Account_Bill__c/fields/Outstanding_Balance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Rollup__c</fullName>
    <label>Outstanding Balance Rollup</label>
    <summarizedField>System_Bill__c.Outstanding_Balance_Rollup__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>