force-app/main/default/objects/Account_Bill__c/fields/Overpayment_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Overpayment_Amount_Rollup__c</fullName>
    <label>Overpayment Amount</label>
    <summarizedField>Overpayment__c.Overpayment_Amount__c</summarizedField>
    <summaryForeignKey>Overpayment__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>