force-app/main/default/objects/Account_Bill__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Property Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Bills</relationshipLabel>
    <relationshipName>Account_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>