force-app/main/default/objects/Account_Bill__c/fields/Past_Bill__c.field-meta.xml
<CustomField>
    <fullName>Past_Bill__c</fullName>
    <label>Past Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>