force-app/main/default/objects/Account_Bill__c/fields/Past_Due_Status__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Status__c</fullName>
    <formula>IF(OR(Balance_Net_Late_Payments__c&lt;1,Parent_Account__r.Recurring_Billing__c = TRUE), &quot;Current or Autopay&quot;, IF(Days_Past_Due__c =0, &quot;Current or Autopay&quot;, IF(Days_Past_Due__c &lt;= 30 , &quot;0-30 Days Late&quot;, IF(Days_Past_Due__c &lt;= 60, &quot;31-60 Days Late&quot;, &quot;61-90 Days Late&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Status</label>
    <type>Text</type>
</CustomField>