force-app/main/default/objects/Account_Bill__c/fields/Past_Payment__c.field-meta.xml
<CustomField>
    <fullName>Past_Payment__c</fullName>
    <label>Past Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>