force-app/main/default/objects/Account_Bill__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>