force-app/main/default/objects/Account_Bill__c/fields/Payment_Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Balance__c</fullName>
    <label>Payment Plan Balance</label>
    <summarizedField>System_Bill__c.Payment_Plan_Balance__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>