force-app/main/default/objects/Account_Bill__c/fields/Payments_Net_Previous_Balances__c.field-meta.xml
<CustomField>
    <fullName>Payments_Net_Previous_Balances__c</fullName>
    <label>Payments Net Previous Balances</label>
    <summarizedField>System_Bill__c.Payments_Net_Previous_Balances__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>