force-app/main/default/objects/Account_Bill__c/fields/Previous_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_Balance__c</fullName>
    <formula>Parent_Account__r.Account_Balance__c + Previous_Overpayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>