force-app/main/default/objects/Account_Bill__c/fields/Previous_Account_Balance_Net_Payments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_Balance_Net_Payments__c</fullName>
    <formula>Parent_Account__r.Account_Balance__c + Past_Payment__c + Previous_Overpayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For use on the account balance bill template with previous payments split into own line. 
 
= Account Balance (published only) + (- Previous Overpayments) + Past Payment 

Account Balance (this field) = 100
Past payment = - 100
New Charges...</inlineHelpText>
    <label>Previous Account Balance Net Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>