force-app/main/default/objects/Account_Bill__c/fields/Previous_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Bill_Amount__c</fullName>
    <label>Previous Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>