force-app/main/default/objects/Account_Bill__c/fields/Previous_Month_Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Overdue_Balance__c</fullName>
    <label>Previous Month Overdue Balance</label>
    <summarizedField>System_Bill__c.Previous_Month_Overdue_Balance__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>