force-app/main/default/objects/Account_Bill__c/fields/Previous_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Overpayment__c</fullName>
    <label>Previous Overpayment</label>
    <summarizedField>System_Bill__c.Previous_Overpayment__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>