force-app/main/default/objects/Account_Bill__c/fields/Previous_Payment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment__c</fullName>
    <label>Previous Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>