force-app/main/default/objects/Account_Bill__c/fields/PrintSF_Bill_Message__c.field-meta.xml
<CustomField>
    <fullName>PrintSF_Bill_Message__c</fullName>
    <label>PrintSF Bill Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>