force-app/main/default/objects/Account_Bill__c/fields/Property_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_Account_ID__c</fullName>
    <formula>Parent_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Account ID</label>
    <type>Text</type>
</CustomField>