force-app/main/default/objects/Account_Bill__c/fields/Property_Address_1_of_2__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_1_of_2__c</fullName>
    <formula>Parent_Account__r.BillingStreet &amp;&quot;, &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address (1 of 2)</label>
    <type>Text</type>
</CustomField>