force-app/main/default/objects/Account_Bill__c/fields/Property_Address_2_of_2__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_2_of_2__c</fullName>
    <formula>Parent_Account__r.BillingCity &amp;&quot; &quot;&amp; Parent_Account__r.BillingState &amp;&quot; &quot;&amp; Parent_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address (2 of 2)</label>
    <type>Text</type>
</CustomField>