force-app/main/default/objects/Account_Bill__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>