force-app/main/default/objects/Account_Bill__c/fields/QC_Check_Past_Bill__c.field-meta.xml
<CustomField>
    <fullName>QC_Check_Past_Bill__c</fullName>
    <description>If flow has been run to compare current Account Bill&apos;s &quot;Past Bill&quot; and previous Account Bill&apos;s &quot;Total Due&quot; fields, set to either Confirmed or ERROR</description>
    <label>QC Past Bill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>