force-app/main/default/objects/Account_Bill__c/fields/Ready_for_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Email Send</label>
    <type>Checkbox</type>
</CustomField>