force-app/main/default/objects/Account_Bill__c/fields/Ready_For_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>