force-app/main/default/objects/Account_Bill__c/fields/Reason_For_Unpublish__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Unpublish__c</fullName>
    <label>Reason For Unpublish</label>
    <length>200</length>
    <type>Text</type>
</CustomField>