force-app/main/default/objects/Account_Bill__c/fields/Second_Additional_Bill_Line_Title__c.field-meta.xml
<CustomField>
    <fullName>Second_Additional_Bill_Line_Title__c</fullName>
    <label>Second Additional Billl Line Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>