force-app/main/default/objects/Account_Bill__c/fields/Send_Bills_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Send_Bills_Contact_ID__c</fullName>
    <formula>Parent_Account__r.Send_Bills_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Bills Contact ID</label>
    <type>Text</type>
</CustomField>