force-app/main/default/objects/Account_Bill__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <label>Shared Solar System</label>
    <length>15</length>
    <type>Text</type>
</CustomField>