force-app/main/default/objects/Account_Bill__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>Previous_Month_Overdue_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Currency</type>
</CustomField>