force-app/main/default/objects/Account_Bill__c/fields/Test_Conga__c.field-meta.xml
<CustomField>
    <fullName>Test_Conga__c</fullName>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/composer8/index.html?SessionId=&quot;
+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Conga_Letter_Stream_Merge__c, &quot;test conga&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Conga</label>
    <type>Text</type>
</CustomField>