force-app/main/default/objects/Account_Bill__c/fields/Total_Due_Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Merge_Field__c</fullName>
    <formula>IF (Total_Due__c &lt; 0, 0, Total_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due Merge Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>