force-app/main/default/objects/Account_Bill__c/fields/Total_Due_Minus_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Minus_Payment_Plan__c</fullName>
    <label>Total Due Minus Payment Plan</label>
    <summarizedField>System_Bill__c.Total_Due_Minus_Payment_Plan__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>