force-app/main/default/objects/Account_Bill__c/fields/Total_Due_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_This_Month__c</fullName>
    <label>Total Due This Month</label>
    <summarizedField>System_Bill__c.Total_Due_This_Month__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>