force-app/main/default/objects/Account_Bill__c/fields/Total_Payments_SB__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_SB__c</fullName>
    <label>Total Payments Applied</label>
    <summarizedField>System_Bill__c.Total_Payments_This_Month__c</summarizedField>
    <summaryForeignKey>System_Bill__c.Account_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>