force-app/main/default/objects/Account_Bill__c/fields/Total_Payments_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_This_Month__c</fullName>
    <formula>Overpayment_Amount_Rollup__c +  Total_Payments_SB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payments This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>